--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                 <input type="text" id="colorName">
                 <label for="type">Тип</label>
                 <select id="type">
-                    <option value="RGB" data-typeColor="RGB">RGB</option>
-                    <option value="RGBA" data-typeColor="RGBA">RGBA</option>
-                    <option value="HEX" data-typeColor="HEX">HEX</option>
+                    <option value="rgb" data-typeColor="RGB">RGB</option>
+                    <option value="rgba" data-typeColor="RGBA">RGBA</option>
+                    <option value="hex" data-typeColor="HEX">HEX</option>
                 </select>
                 <label for="code" id="codeLabel">Код цвета</label>
                 <input type="text" id="code">
@@ -25,7 +25,7 @@
             </div>
         </div>
         <p>палитра цветов</p>
-        <div class="palette-block">
+        <div class="palette-block" id="paletteBlock">
             <div class="color-cards">
                 <div class="color-card">
                     <div class="card-name">
