--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <p>палитра цветов</p>
         <div class="palette-block" id="paletteBlock">
-            <div class="color-cards">
+            <!-- <div class="color-cards">
                 <div class="color-card">
                     <div class="card-name">
                         <p>имя</p>
@@ -34,7 +34,7 @@
                         <p>124,35,23</p>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 
